<resources>
    <string name="app_name">Abre Aplicaciones</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="btnLimpiar">Limpiar</string>
    <string name="btnsalir">Salir</string>
    <string name="btnRegresar">Regresar</string>
    <string name="btnLlamar">Llamar</string>
    <string name="btnWhats">WhatsApp</string>
    <string name="enviarIgmWhats">Enviar Img whatsapp</string>
</resources>