<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:icon="@drawable/ic_launcher_foreground"
    tools:context=".MainActivity"
    android:allowBackup="true"
    android:roundIcon="@drawable/ic_launcher_foreground"
    android:supportsRtl="true"
    android:theme="@style/AppTheme">>


    <EditText
        android:id="@+id/etSaludo"
        android:layout_width="354dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.396" />

    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="151dp"
        android:layout_height="46dp"
        android:onClick="EnviarMensaje"
        android:text="@string/btnAceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.702" />


    <Button
        android:id="@+id/btnWhats"
        android:layout_width="151dp"
        android:layout_height="46dp"
        android:onClick="IniciarWhatsApp"
        android:text="@string/btnWhats"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.818" />

    <Button
        android:id="@+id/btnLlamar"
        android:layout_width="151dp"
        android:layout_height="46dp"
        android:onClick="Llamar"
        android:text="@string/btnLlamar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.702" />

    <Button
    android:id="@+id/btnlimpiar"
    android:layout_width="151dp"
    android:layout_height="46dp"
    android:onClick="limpiarForm"
    android:text="@string/btnLimpiar"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.134"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.928" />

    <Button
        android:id="@+id/btnsalir"
        android:layout_width="151dp"
        android:layout_height="46dp"
        android:onClick="salir"
        android:text="@string/btnsalir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.928" />
</androidx.constraintlayout.widget.ConstraintLayout>